<resources>
    <string name="app_name">Wi-Fi_RTT_mesure</string>
    <string name="title_activity_ranging">RangingActivity</string>
    <string name="title_activity_localize">LocalizeActivity</string>

    <!-- activity_main -->
    <string name="wifi_conf">Wi-Fi Status</string>
    <string name="wifi_support">Android Wifi supports : </string>
    <string name="wifi_availavle">Wi-Fi RTT is available : </string>
    <string name="input_terminal_number">DeviceID</string>
    <string name="input_number">Input deviceID</string>
    <string name="mode">Mode Selection</string>
    <string name="station">AP</string>
    <string name="terminal">Terminal</string>
    <string name="geomagnetic">Magnetism</string>

    <!-- fragment_connect -->
    <string name="terminal_mode">Terminal Mode</string>
    <string name="device_id">device ID : </string>
    <string name="wifi_aware">Wi-Fi Aware Connection</string>
    <string name="connect">connect</string>
    <string name="close">close</string>
    <string name="reconnect">reconnect</string>
    <string name="ap_connection">Access Point Connection</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="ranging">ranging</string>

    <!-- fragment_ranging -->
    <string name="ranging_interval">Ranging Interval</string>
    <string name="measure_time">Measure Time</string>
    <string name="measure_time_hint">60000</string>
    <string name="ms">ms</string>
    <string name="make_file">Make File</string>
    <string name="ranging_start">Ranging Start</string>
    <string name="ranging_stop">Ranging Stop</string>
    <string name="plus">+1</string>
    <string name="minus">-1</string>
    <string name="truth">distance</string>
    <string name="m">m</string>

    <!-- inflate_results -->
    <string name="range">Range</string>
    <string name="range_sd">RangeSD</string>
    <string name="rssi">RSSI</string>
    <string name="successes_in_burst">Successes in burst</string>

    <!-- magnetic_activity -->
    <string name="orientation">Orientation</string>
    <string name="yaw">yaw</string>
    <string name="pitch">pitch</string>
    <string name="roll">roll</string>
    <string name="magnetic">Magnetic</string>
    <string name="axisx">X-axis</string>
    <string name="axisy">Y-axis</string>
    <string name="axisz">Z-axis</string>
    <string name="cc1f">CC1F</string>
    <string name="cc5f">CC5F</string>
    <string name="point_select">point select</string>
    <string name="savefile">save file</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="make_mag">make file</string>

    <!-- direction spinner items -->
    <string-array name="direction">
        <item></item>
        <item>N</item>
        <item>NE</item>
        <item>E</item>
        <item>SE</item>
        <item>S</item>
        <item>SW</item>
        <item>W</item>
        <item>NW</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
