<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/terminal_mode"
        android:textSize="40dp"
        android:textColor="#007AB7"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_id"
            android:textSize="20dp"
            android:textColor="#AAAAAA"/>

        <TextView
            android:id="@+id/deviceID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#AAAAAA"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/wifi_aware"
        android:textSize="30dp"
        android:textColor="#007AB7"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#007AB7"
        android:text="@string/connect"
        android:textColor="#FFFFFF"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#7379AE"
            android:text="@string/close"
            android:textColor="#FFFFFF"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/reconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#7379AE"
            android:text="@string/reconnect"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ap_connection"
        android:textSize="30dp"
        android:textColor="#3261AB"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/scan_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3261AB"
        android:text="@string/search"
        android:textColor="#FFFFFF"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Spinner
        android:id="@+id/partner_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#7379AE"
            android:text="@string/add"
            android:textColor="#FFFFFF"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ranging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#DA5019"
            android:text="@string/ranging"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</LinearLayout>