<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/wifi_conf"
        android:textColor="#007AB7"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_support"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/support_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_availavle"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rtt_avail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/input_terminal_number"
        android:layout_gravity="center"
        android:textColor="#007AB7"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/deviceID"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/input_number"
            android:textSize="15sp"/>

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/mode"
        android:textColor="#EDAD0B"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:visibility="visible">

        <Space
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/ap"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#EDAD0B"
            android:text="@string/station"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/sta"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#EDAD0B"
            android:text="@string/terminal"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

        <Button
            android:id="@+id/magnetic"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="12"
            android:background="#23AC0E"
            android:text="@string/geomagnetic"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"/>

</LinearLayout>