<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Magnetic.MagneticActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="5">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/orientation"
            android:textSize="10pt"/>

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="13"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="5">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/yaw"
            android:textSize="10pt"/>


        <TextView
            android:id="@+id/yaw"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="10pt"/>

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="5">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/pitch"
            android:textSize="10pt"/>


        <TextView
            android:id="@+id/pitch"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="10pt"/>

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="5">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/roll"
            android:textSize="10pt"/>


        <TextView
            android:id="@+id/roll"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="10pt"/>

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="5">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/magnetic"
            android:textSize="10pt"/>

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="13"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="5">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/axisx"
            android:textSize="10pt"/>


        <TextView
            android:id="@+id/mag_yaw"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="10pt"/>

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="5">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/axisy"
            android:textSize="10pt"/>


        <TextView
            android:id="@+id/mag_pitch"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="10pt"/>

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        android:layout_weight="5">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/axisz"
            android:textSize="10pt"/>


        <TextView
            android:id="@+id/mag_roll"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="10pt"/>

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="15"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"
        android:gravity="center">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

        <Button
            android:id="@+id/point_select"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/point_select" />

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10"
        android:gravity="center">

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

        <Button
            android:id="@+id/start"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/start" />

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/stop" />

        <Space
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="5"/>

</LinearLayout>